added alts to png files / commented css.style / finished html semantics / organized

--- a/OneDrive/Desktop/challenges/horiseon-challenge/assets/css/style.css
+++ b/OneDrive/Desktop/challenges/horiseon-challenge/assets/css/style.css
@@ -1,12 +1,17 @@
+/* all elements on page */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* body color */
+
 body {
     background-color: #d9dcd6;
 }
+
+/* header section */
 
 .header {
     padding: 20px;
@@ -41,14 +46,18 @@ body {
     margin-left: 25px;
 }
 
+
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+
 p {
     font-size: 16px;
 }
+
+/* hero / jumbotron image */
 
 .hero {
     height: 800px;
@@ -58,6 +67,8 @@ p {
     background-size: cover;
     background-position: center;
 }
+
+/* "services" content inner element position */
 
 .float-left {
     float: left;
@@ -69,44 +80,15 @@ p {
     margin-left: 25px;
 }
 
+/* stacked rows "services" content  */
+
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-
-.benefit {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-
-
-.benefit h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-
-
-.benefit img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+/* stacked rows "services" list with images and headers */
 
 .services {
     margin-bottom: 20px;
@@ -126,6 +108,36 @@ p {
     font-size: 36px;
 }
 
+/* right column "benefits" list with icons and headers */
+
+.benefits {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
+.benefit {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/* signature and copywrite information */
 
 .footer {
     padding: 30px;
