--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* HEADER SECTION */
+
 header {
   position: -webkit-sticky;
   position: sticky;
@@ -19,7 +21,7 @@ header {
   justify-content: space-between;
   flex-wrap: wrap;
   z-index: 9999;
-  margin-bottom: 25px;
+  margin-bottom: 14px;
 }
 
 header h1 {
@@ -27,9 +29,13 @@ header h1 {
   font-size: 36px;
   color: #404443;
   margin: 7px 7px;
+  align-items: center;
+  justify-content: center;
   text-shadow: 0 0 8px rgba(0,0,0,0.3);
   
 }
+
+
 
 header a {
   text-decoration: none;
@@ -37,11 +43,12 @@ header a {
 }
 
 
-
 header nav {
+  display: flex;
+  align-items: stretch;
   margin-top: 7px;
   margin-left: -10px;
-  margin-bottom: 16px;
+  margin-bottom: 40px;
   
 }
 
@@ -50,6 +57,7 @@ header nav ul {
   flex-wrap: wrap;
   justify-content: space-between;
   list-style: none;
+  padding-bottom: 0;
 
 }
 
@@ -58,10 +66,10 @@ header nav ul li {
 }
 
 header nav ul li a {
-  padding: 5px 10px;
+  padding: 2px 10px;
   font-weight: lighter;
-  font-size: 1.55vw;
-  text-shadow: 0 0 8px rgba(0,0,0,0.5);
+  font-size: 18px;
+  text-shadow: 0 0 8px rgba(0,0,0,0.3);
   
 }
 
@@ -73,29 +81,39 @@ header nav ul li a:hover {
   
 }
 
+
+
 header h2 {
-  color: #404443;
+  background-color: #404443;
+  color: rgb(252 252 252);
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 8px;
+  margin-top: 40px;
+  margin-bottom: 0px;
+  padding: 4px 2px;
+  border-top: 1px solid #7e8987;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 
 header p {
   font-weight: bold;
   font-style: italic;
-  color: #fff
+  background-color: #404443;
+  color: rgb(252 252 252);
+  margin-bottom: -20px;
+  padding: 0 10px 5px 3px;
   
 }
 
+/* ABOUT ME SECTION */
+
 .bio-box {
-  /* display: flex; */
   margin: 0 auto;
-  /* flex-wrap: wrap; */
-  /* justify-content: space-around; */
   padding: 20px 50px;
   background-color: #404443;
-  
+  margin-bottom: 25px;
 }
 
 .flex-row {
@@ -103,18 +121,21 @@ header p {
 }
 
 .bio-box h1 {
-  font-size: 48px;
+  font-size: 38px;
   font-weight: lighter;
   color: #8db580;
   padding-right: 18px;
   margin: 20px;
   border-right: 2px solid #8db580;
+  text-shadow: 0 0 8 rgba(0,0,0,0.5);
 }
 
 .bio img {
-  width: 20%;
+  width: 300px;
+  height: 300px;
   border: 1px solid #8db580;
   border-radius: 10px;
+  margin: auto;
 }
 
 
@@ -127,11 +148,49 @@ header p {
 .bio p {
   display: flex;
   flex-wrap: wrap;
-  font-size: 22px;
+  font-size: 16px;
   color: rgb(252 252 252);
   align-items: center;
   padding: 50px;
 }
+
+/* MY WORK SECTION */
+
+.assign-box {
+  margin: 0 auto;
+  padding: 20px 50px;
+  background-color: #404443;
+  margin-bottom: 25px;
+}
+
+.assign-box h1 {
+  font-size: 38px;
+  font-weight: lighter;
+  color: #8db580;
+  padding-right: 18px;
+  margin: 20px;
+  border-right: 2px solid #8db580;
+  text-shadow: 0 0 8 rgba(0,0,0,0.5);
+}
+
+.run-buddy {
+  display: flex;
+  padding: 25px;
+  line-height: 1.3;
+}
+
+.run-buddy img {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: auto;
+  height: 500px;
+  border: 2px solid #8db580;
+  border-radius: 10px;
+  padding: 4px;
+}
+
+
 
 
   
