--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,8 @@ header {
   margin-bottom: 14px;
 }
 
+
+
 header h1 {
   font-weight: bold;
   font-size: 36px;
@@ -108,7 +110,9 @@ header p {
 /* ABOUT ME SECTION */
 
 .bio-box {
-  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 50px;
   padding: 20px 50px;
   background-color: #404443;
   margin-bottom: 25px;
@@ -117,10 +121,13 @@ header p {
 
 .flex-row {
   display: flex;
-  justify-content: flex-end;
+  
 }
 
 .bio-box h1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   font-size: 38px;
   font-weight: lighter;
   color: #8db580;
@@ -131,6 +138,8 @@ header p {
 }
 
 .bio img {
+  display: flex;
+  flex-wrap: wrap;
   width: 300px;
   height: 300px;
   border: 1px solid #8db580;
@@ -157,6 +166,9 @@ header p {
 /* MY WORK SECTION */
 
 .assign-box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   margin: 0 auto;
   padding: 20px 50px;
   background-color: #404443;
@@ -164,6 +176,9 @@ header p {
 }
 
 .assign-box h1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   font-size: 38px;
   font-weight: lighter;
   color: #8db580;
@@ -173,22 +188,55 @@ header p {
   text-shadow: 0 0 8 rgba(0,0,0,0.5);
 }
 
-.run-buddy {
+  
+
+
+figure {
   display: flex;
-  padding: 25px;
-  line-height: 1.3;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 50px;
 }
 
-.run-buddy img {
-  justify-content: center;
+
+figure h2 {
+  justify-content: space-evenly;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  color: rgb(252 252 252);
+  font-weight: lighter;
+  margin: 25px 50px;
+  border-bottom: 2px solid rgb(252 252 252);
+  padding: 4px;
+}
+
+.run-buddy {
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 25px;
+  display: flex;
+  width: 250px;
+  height: auto;
+  border: 2px solid rgb(252 252 252);
+  border-radius: 10px;
+  padding: 4px;
+  /* margin: auto; */
+}
+
+.horiseon{
+  justify-content: space-between;
   align-items: center;
   display: flex;
   width: auto;
-  height: 500px;
+  height: 505px;
   border: 2px solid #8db580;
   border-radius: 10px;
   padding: 4px;
+  margin: auto;
 }
+
+
 
 
 
