--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,13 +72,13 @@ header nav ul li a {
   justify-content: center;
   padding: 2px;
   color: #404443;
-  font-weight: lighter;
+  font-weight: normal;
   font-size: 18px;
   text-decoration: none;
   border-right: 2px solid #404443;
   padding-right: 4px;
   margin-left: 4px;
-  text-shadow: 0 0 8px rgba(0,0,0,0.3);
+  text-shadow: 0 0 8px rgba(0,0,0,0.1);
   
 }
 
@@ -255,39 +255,42 @@ header nav ul li a:hover {
 .assign-box-url {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  align-content: space-between;
+  justify-content: flex-start;
+  max-width: 450px;
   margin: 20px;
-  border: 2px solid rgb(252 252 252);
+  margin-left: 45%;
+  margin-bottom: 18px;
+  /* border: 2px solid #8db580; */
   border-radius: 15px;
 }
 
 .assign-box-url h3 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   color: rgb(252 252 252);
-  margin: 20px 20px 10px 20px;
+  margin: 20px 0px 10px 20px;
   
 }
 
-
 .assign-box-url a {
+  display: flex;
+  flex-wrap: wrap;
   text-decoration: none;
   color: #8db580;
   font-size: 16px;
-  /* line-height: 1.5; */
   margin: 0px 20px 20px  20px; 
 }
 
-
-
-/* .horiseon a {
+.assign-box-url a:hover {
+  display: flex;
+  flex-wrap: wrap;
   text-decoration: none;
-  color: #8db580;
+  color: rgb(252 252 252);
   font-size: 16px;
-  max-width: 100px;
-} */
-
-
+  margin: 0px 20px 20px  20px; 
+  
+}
 
 /* Contact Information */
 
@@ -304,11 +307,12 @@ footer {
 footer h1 {
   font-weight: normal;
   font-size: 36px;
+  width: 67%;
   color: #404443;
   margin: 7px 7px;
   align-items: center;
   justify-content: flex-start;
-  
+  border-bottom: 2px solid #404443;
   text-shadow: 0 0 8px rgba(0,0,0,0.3);
 
 }
@@ -347,10 +351,10 @@ footer nav ul li {
 
 footer nav ul li a {
   padding: 2px;
-  font-weight: lighter;
+  font-weight: normal;
   font-size: 18px;
   color: #404443;
-  text-shadow: 0 0 8px rgba(0,0,0,0.3);
+  /* text-shadow: 0 0 8px rgba(0,0,0,0.3); */
   text-decoration: none;
   border-right: 2px solid #404443;
   padding-right: 4px;
