beginning mobile responsive 768px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ header h1 {
   justify-content: center;
   border-bottom: 2px solid var(--dark-gray);
   text-shadow: 0 0 8px rgba(0,0,0,0.3);
-  padding-top: 15px;
+  /* padding-top: 15px; */
 }
 
 header nav {
@@ -389,6 +389,7 @@ footer nav ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 0;
+    border-bottom: 1px solid var(--sage);
    }
 
    .bio-box h1 {
@@ -428,7 +429,27 @@ footer nav ul li a:hover {
   }
 
   .assign-box-images {
-    justify-content: center;
+    justify-content: flex-start;
+    margin: 0;
+  }
+
+  .run-buddy img {
+    /* flex: 0 100%; */
+    width: 200px;
+    height: auto;
+    margin: 20px 30px 0 20px;
+    padding: 0;
+    border: 2px solid var(--sage);
+    border-radius: 15px;
+  }
+  
+  .horiseon img{
+    width: 170px;
+    height: auto;
+    margin: 40px 0 100px 40px;
+    padding: 0;
+    border: 2px solid var(--sage);
+    border-radius: 15px;
   }
 
   .assign-box h1 {
@@ -438,7 +459,9 @@ footer nav ul li a:hover {
   }
 
   .assign-box h2 {
+    margin-left: 40px;
     padding-top: 20px;
+    justify-content: center;
   }
 
   .bio {
