--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,6 @@ header h1 {
   justify-content: center;
   border-bottom: 2px solid var(--dark-gray);
   text-shadow: 0 0 8px rgba(0,0,0,0.3);
-  /* padding-top: 15px; */
 }
 
 header nav {
@@ -139,7 +138,6 @@ header nav ul li a:hover {
   border-radius: 10px;
   margin: auto;
 }
-
 
 .bio {
   display: flex;
@@ -271,6 +269,7 @@ footer nav {
   display: flex;
   justify-content: center;
   margin-top: 7px;  
+  margin-bottom: 7px;
 }
 
 footer nav p {
@@ -330,9 +329,7 @@ footer nav ul li a:hover {
 
   header h1 {
     width: 100%;
-    /* flex: 0 100%; */
     text-align: center;
-    
   }
 
   header nav {
@@ -390,35 +387,34 @@ footer nav ul li a:hover {
     flex-wrap: wrap;
     margin-bottom: 0;
     border-bottom: 1px solid var(--sage);
-   }
+  }
 
-   .bio-box h1 {
-     padding-right: 20px;
-   }
+  .bio-box h1 {
+    padding-right: 20px;
+  }
  
+  .bio-box img {
+    width: auto;
+    justify-content: flex-start;;
+    margin-bottom: 20px;
+    margin-right: 450px;
+    margin-left: 0;  
+  }
  
-   .bio-box img {
-     width: auto;
-     justify-content: flex-start;;
-     margin-bottom: 20px;
-     margin-right: 450px;
-     margin-left: 0;  
-   }
+  .bio {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 25px;
+    line-height: 1.3;
+  }
  
-   .bio {
-     display: flex;
-     flex-wrap: wrap;
-     padding: 25px;
-     line-height: 1.3;
-   }
- 
-   .bio p {
-     font-size: 16px;
-     color: var(--off-white);
-     align-items: flex-end;
-     justify-content: flex-start;
-     padding: 0
-   }
+  .bio p {
+    font-size: 16px;
+    color: var(--off-white);
+    align-items: flex-end;
+    justify-content: flex-start;
+    padding: 0
+  }
 
    .assign-box {
     display: flex;
@@ -434,7 +430,6 @@ footer nav ul li a:hover {
   }
 
   .run-buddy img {
-    /* flex: 0 100%; */
     width: 200px;
     height: auto;
     margin: 20px 30px 0 20px;
@@ -475,7 +470,6 @@ footer nav ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     margin: 0;
-    
   }
 
   footer h1 {
@@ -496,6 +490,7 @@ footer nav ul li a:hover {
  /* mobile device screens (768) */
 
 @media only screen and (max-device-width : 768px) {
+  
   body {
     width: 100%;
   }
@@ -523,25 +518,10 @@ footer nav ul li a:hover {
     justify-content: center;
   }
 
-  /* .bio-box {
-    display: flex;
-    flex-wrap: wrap; 
-    width: 100%;
-    flex: 0 100%;
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 0;
-   } */
-
-  
-
   .bio-box h1 {
     padding: 0;
     font-weight: lighter;
-    
-    
   }
-
 
   .bio-box img {
     margin: 0;
@@ -556,28 +536,178 @@ footer nav ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    /* padding: 25px; */
     line-height: 1.3;
   }
-
+  
   .bio p {
-    
     font-size: 18px;
     width: 100%;
     color: var(--off-white);
     justify-content: flex-start;
+  }
   
-
-    
+  .assign-box-images {
+    justify-content: center;
+    margin-right: 130px
   }
 }
 
-/* laptops and desktops ------------ */
-/* @media only screen and (max-device-width : 575px)
+/* mobile device screen 575px */
 
-/* } 
+@media only screen and (max-device-width : 575px) {
 
+  .flex-row {
+    display: flex;
+    flex-direction: column;
+  }
 
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
+    margin-bottom:auto;
+  }
 
+  .header-right {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-end;
+    max-width: 700px;
+    margin-left: 105%;
+    padding-top: 25px;
+  }
+
+  header nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-start;
+    margin-left: 20px;  
+  }
+
+  .header-right h2 {
+    width: max-content;
+    justify-content: center;
+    margin-left: 162px;
+    margin-top: 0;    
+  }
+
+  .header-right p {
+    width: 100%;
+    margin-left: 162px;
+    justify-content: center;
+  }
+
+  .assign-box-url a {
+    max-width: 20px;
+    text-decoration: none;
+    color: var(--sage);
+    font-size: 16px;
+    margin: 0px 20px 20px  20px; 
+  }
+
+  .bio-box {
+    width: 100%;
+    margin-bottom: 0;
+    border-bottom: 1px solid var(--sage);
+  }
 
   
+
+  .bio-box h1 {
+    padding-bottom: 2px;;
+    font-weight: lighter;
+    border: none;
+    border-bottom: 1px solid;
+  }
+
+  .bio-box img {
+    margin: 0;
+    width: 150px;
+    height: auto;
+    justify-content: flex-start;  
+    margin-right: 70px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+  }
+
+  .bio {
+    justify-content: flex-start;
+    line-height: 1.3;
+  }
+
+  .bio p {
+    font-size: 18px;
+    width: 100%;
+    color: var(--off-white);
+    justify-content: flex-start;
+  }
+
+  .assign-box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 0;
+    border-bottom: 1px solid var(--sage);
+  }
+
+  
+  .assign-box h1 {
+    font-weight: normal;
+    max-width: 450px;
+    padding: 2px;
+    border: none;
+    border-bottom: 1px solid;
+  }
+  
+
+  .assign-box h2 {
+    margin-left: 40px;
+    padding-top: 20px;
+    justify-content: center;
+  }
+
+  .horiseon img{
+    width: 170px;
+    height: auto;
+    margin: 40px 0 100px 40px;
+    padding: 0;
+    border: 2px solid var(--sage);
+    border-radius: 15px;
+  }
+
+  .assign-box-images {
+    justify-content: flex-start;
+    margin: 0;
+  }
+
+  .run-buddy img {
+    width: 200px;
+    height: auto;
+    margin: 20px 30px 0 20px;
+    padding: 0;
+    border: 2px solid var(--sage);
+    border-radius: 15px;
+  }
+  
+  .horiseon img{
+    width: 170px;
+    height: auto;
+    margin: 40px 0 100px 40px;
+    padding: 0;
+    border: 2px solid var(--sage);
+    border-radius: 15px;
+  }
+  
+  .assign-box-url {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 450px;
+    margin: 20px;
+    margin-left: 8%;
+    margin-bottom: 18px;
+  }
+}
